a1/brendan_gordon/TEST_PROGRAMS/invalidtype/justin_domingue/invalidtype-5.min
# Invalid 5

var cond: float;

cond = 5.0;

if cond then  #condition cannot be float
  print "This should not be printed...";
endif


